--- a/views/theater/dashboard.hbs
+++ b/views/theater/dashboard.hbs
@@ -17,3 +17,41 @@ user home page success <br>
 user home page success <br>
 user home page success <br>
 vuser home page success <br> </h1>
+<h1>user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+vuser home page success <br> </h1>
+<h1>user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+user home page success <br>
+vuser home page success <br> </h1>
