comment social auth on theater owner side

--- a/views/theater/email-login.hbs
+++ b/views/theater/email-login.hbs
@@ -44,14 +44,14 @@
             <form id="Theater-owner-emailLogin" action="/theater-management/email-login" method="POST">
 
 
-                <div class="social-auth-link">
+                {{!-- <div class="social-auth-link">
                     <i class="fab fa-github"></i>
                     <a href="/theater-management/auth/github">Login with Github</a>
                 </div>
                  <div style="background: rgba(151, 11, 18, 0.734);" class="social-auth-link">
                     <i class="fab fa-google-plus-g"></i>
                     <a href="/theater-management/auth/google">Login with Google</a>
-                </div>
+                </div> --}}
                  {{!-- <div style="background-color: rgb(14, 106, 148);" class="social-auth-link">
                     <i class="fab fa-facebook-f"></i>
                     <a href="">Login with Facebook</a>
