chage link on the server side

--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -265,7 +265,7 @@ RIGHT SIDEBAR TOGGLE SECTION
                     {{#if this.bookingCancelled}}
                     <span class="booking-cancel"></span>
                     {{else}}
-                        <input type="text" class="upcoming-booking" value="{{this.date}}">
+                        <input style="display: none;" type="text" class="upcoming-booking" value="{{this.date}}">
                     {{/if}}
                     {{/each}}
                     <script>
