--- a/views/user/home-page.hbs
+++ b/views/user/home-page.hbs
@@ -15,9 +15,9 @@
 	<div class="companies20-content">
 		<div class="owl-one owl-carousel owl-theme">
 			{{#each randomDetails}}
-			<div class="item">
+			<div  class="item">
 				<li>
-					<div style="" class="slider-info banner-view bg bg2">
+					<div  class="slider-info banner-view bg bg2">
 						<img style="position: relative; no-repeat center" src="/movieImages/{{this._id}}Cover_photo.jpg"
 							width="100%" height="100%" alt="">
 						<div style="position: absolute;" class="banner-info">
