set payment method

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -66,6 +66,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     href="http://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&amp;display=swap"
     rel="stylesheet">
   <!-- Template CSS -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   {{/if}}
   {{!-- theater_owner layout ----------------------------------------------------------------------------------}}
   {{#if theater_owner}}
