--- a/views/theater/booking-history.hbs
+++ b/views/theater/booking-history.hbs
@@ -8,6 +8,7 @@
                 <th scope="col">Movie</th>
                 <th scope="col">Date</th>
                 <th scope="col">Price</th>
+                <th scope="col">Payment</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,7 @@
                 <td>{{this.movie}}</td>
                 <td>{{this.date}}</td>
                 <td>Rs.{{this.price}}</td>
+                 <td>{{this.paymentMethod}}</td>
             </tr>
             {{/each}}
         </tbody>
