--- a/views/theater/add-seat-number.hbs
+++ b/views/theater/add-seat-number.hbs
@@ -645,18 +645,238 @@
 
   for (var i = 0; i < totalseat.length; i++) {
     Seats = document.getElementsByClassName('allSeats')[i]
-    document.getElementsByClassName('addSeatNumber')[i].maxLength = '4'
+    document.getElementsByClassName('addSeatNumber')[i].maxLength = '3'
     if (Seats.value === 'Available_seats') {
       document.getElementsByClassName('addSeatNumber')[i].style.background = ' rgb(49, 49, 49)'
       document.getElementsByClassName('addSeatNumber')[i].style.outline = 'none'
+       document.getElementsByClassName('addSeatNumber')[i].setAttribute('disabled', 'disabled')
     } else {
       document.getElementsByClassName('addSeatNumber')[i].style.background = 'lightslategray'
       document.getElementsByClassName('addSeatNumber')[i].setAttribute('disabled', 'disabled')
-
-
     }
   }
 </script>
+<script> // add seat number random using for loop and if 
+  var row1 = 0;
+  var row2 = 0;
+  var row3 = 0;
+  var row4 = 0;
+  var row5 = 0;
+  var row6 = 0;
+  var row7 = 0;
+  var row8 = 0;
+  var row9 = 0;
+  var row10 = 0;
+  var row11 = 0;
+  var row12= 0;
+  var allSeats = document.getElementsByClassName('allSeats')
+  for (var i = 0; i < totalseat.length; i++) {
+    if (allSeats[i].value === 'Available_seats' && i < 16) {
+      row1 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 15 && i < 32) {
+      row2 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 31 && i < 48) {
+      row3 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 47 && i < 64) {
+      row4 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 63 && i < 80) {
+      row5 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 79 && i < 96) {
+      row6 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 95 && i < 112) {
+      row7 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 111 && i < 128) {
+      row8 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 127 && i < 144) {
+      row9 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 143 && i < 160) {
+      row10 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 159 && i < 176) {
+      row11 = 1
+    }
+    if (allSeats[i].value === 'Available_seats' && i > 176 && i < 192) {
+      row12 = 1
+    }
+  }
+  var details= 1
+  var rowArray = Array()
+  function chr(){
+  var pushData =  String.fromCharCode((details - 1) + 65);
+  rowArray.push(pushData)
+   details = details+1
+  }
+
+  //--------------------------------------------------------
+  // check row 
+  if (row1 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row 
+  if (row2 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row
+  if (row3 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row 
+  if (row4 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row 
+  if (row5 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row
+  if (row6 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row 
+  if (row7 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row 
+  if (row8 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row
+  if (row9 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row 
+  if (row10 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row 
+  if (row11 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+  // check row
+  if (row12 === 1) {
+    chr()
+  } else {
+    rowArray.push(0)
+  }
+//--------------------------------------------------------
+  var c = 1
+  var letter
+  for (var i = 0; i < totalseat.length; i++) {
+    if(i<16){
+      letter =rowArray[0]
+    }
+    else if(i<32 && i>=16){
+      letter = rowArray[1]
+    }
+    else if(i<48 && i>=32){
+      letter = rowArray[2]
+    }
+    else if(i<64 && i>=48){
+        letter = rowArray[3]
+    }
+    else if(i<80 && i>=64){
+        letter = rowArray[4]
+    }
+    else if(i<96 && i>=80){
+        letter = rowArray[5]
+    }
+    else if(i<112 && i>=96){
+        letter = rowArray[6]
+    }
+    else if(i<128 && i>=112){
+        letter = rowArray[7]
+    }
+    else if(i<144 && i>=128){
+        letter = rowArray[8]
+    }
+    else if(i<160 && i>=144){
+        letter = rowArray[9]
+    }
+    else if(i<176 && i>=160){
+        letter = rowArray[10]
+    }
+    else if(i<192 && i>=176){
+        letter = rowArray[11]
+    }
+
+    var allSeats = document.getElementsByClassName('allSeats')[i]
+    if (allSeats.value === 'Available_seats') {
+      if(c>9){      // for remove string in between 
+        var a = ''
+      }
+      else{
+        var a = '0'
+      }
+      document.getElementsByClassName('addSeatNumber')[i].value =letter+ a+ c++
+    } else {
+    }
+    if (i === 15 || i === 31 || i === 47 || i === 63 || i === 79 || i === 95 || i === 111 || i === 127 || i === 143 || i === 159 || i === 175) {
+      c = 1
+    }
+  }
+  var seatNumber = Array() 
+  for(var i=0;i<totalseat.length;i++){
+    var allSeats = document.getElementsByClassName('allSeats')[i]
+    if(allSeats.value === 'Available_seats'){
+     var numberAddedSeats = document.getElementsByClassName('addSeatNumber')[i].value
+        seatNumber.push(numberAddedSeats)
+    }else{
+      seatNumber.push('Free_space')
+    }
+  }
+  function saveSeatNumbers(seatArrangementId){
+  var confirmation =  confirm('do you want to save')
+  if(confirmation=== true){
+     $.ajax({
+        url: '/theater-management/add-seat-number/',
+        method: 'post',
+        data: {
+          seatStructureId: seatArrangementId,
+          seatNumber: JSON.stringify(seatNumber)
+        },
+        type: 'json',
+        success: (response) => {
+          location.reload()
+
+        }
+      })
+  }
+  }
+ 
+</script>
+
+{{!--
 <script>
   function saveSeatNumbers(seatArrangementId) {
     var totalSeats = document.getElementsByClassName('addSeatNumber')
@@ -720,21 +940,22 @@
       })
     }
   }
-</script>
+</script> --}}
+{{!--
 <script>
   var seatNumbers = document.getElementsByClassName('seatNumbers')
   for (var i = 0; i < seatNumbers.length; i++) {
     var a = document.getElementsByClassName('seatNumbers')[i].value
-        if (a === 'Free_space') {
-          
-        document.getElementsByClassName('addSeatNumber')[i].value=''
-        }
-       else {
-        
-        document.getElementsByClassName('addSeatNumber')[i].value = a
-      }
-    
-    
+    if (a === 'Free_space') {
+
+      document.getElementsByClassName('addSeatNumber')[i].value = ''
+    }
+    else {
+
+      document.getElementsByClassName('addSeatNumber')[i].value = a
+    }
+
+
 
   }
-</script>
+</script> --}}
